--- a/src/scss/vars/_forms.scss
+++ b/src/scss/vars/_forms.scss
@@ -1,5 +1,9 @@
+@import '../helpers/functions';
+
 $input-radius: 3px;
-$input-padding: 0.5rem;
+$input-height: rems(40px);
+$input-padding-vertical: rem-calc(rem-calc($input-height - 1.444rem) / 2);
+$input-padding-horizontal: 0.5rem;
 $input-width: 19.5rem;
 $input-border-width: 1px;
 $input-widths: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 30, 40, 50;
@@ -35,7 +39,7 @@ $nbsp-width: 0.256rem;
   // Space between characters is 0.029rem wide
   // Extra 2 pixels are to prevent clipping when the cursor is visible (2px is needed for iOS)
 
-  $padding-width: $input-padding * 2;
+  $padding-width: $input-padding-horizontal * 2;
   $chars-width: $char-width * $chars;
   $num-chars-width: $num-max-width * $num-chars;
   $chars-space-width: $char-space-width * ($chars + $num-chars - 1);
